<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/namaapp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#52FA63"
        android:textSize="25sp"
        android:text="@string/danang_hasto_munandar_quiz_1"
        android:textAlignment="center"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/layot1"
        android:layout_below="@+id/namaapp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pelangganku"
            android:layout_width="match_parent"
            android:textColor="#061698"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:minHeight="48dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layot1">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gold"/>

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silver"/>

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biasa"/>

    </RadioGroup>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:id="@+id/layot2"
      android:layout_below="@+id/radiogroup"
      android:layout_height="wrap_content">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/kodebarangku"
          android:layout_width="match_parent"
          android:minHeight="48dp"
          android:layout_height="wrap_content"
          android:textColor="#061698"
          android:hint="@string/kode_barangg"
          android:layout_marginTop="20dp"
          android:inputType="text"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:id="@+id/layot3"
      android:layout_below="@+id/layot2"
      android:layout_height="wrap_content">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/jumlahbarangku"
          android:layout_width="match_parent"
          android:textColor="#12173E"
          android:layout_height="wrap_content"
          android:hint="@string/jumlah_barang"
          android:layout_marginTop="20dp"
          android:minHeight="48dp"
          android:inputType="number"/>
  </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnmasuk"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/layot3"
        android:layout_marginStart="125dp"
        android:layout_marginTop="30dp"
        android:text="@string/masuk"
        android:textSize="20dp" />


</RelativeLayout>